{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 62,
  "lineage": "b9683b57-5f37-81ed-bc6d-73a7135e3a42",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242201278004:internet-gateway/igw-0ca80c7d614cc65cf",
            "id": "igw-0ca80c7d614cc65cf",
            "owner_id": "242201278004",
            "region": "us-east-1",
            "tags": {
              "Environment": "prod",
              "Project": "personal-website-stack",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "Environment": "prod",
              "Project": "personal-website-stack",
              "managed_by": "Terraform"
            },
            "vpc_id": "vpc-082cd8211b269c6ca"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.personal_website_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242201278004:route-table/rtb-0b9aa7b63328557c1",
            "id": "rtb-0b9aa7b63328557c1",
            "owner_id": "242201278004",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ca80c7d614cc65cf",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-082cd8211b269c6ca"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "242201278004",
            "id": "rtb-0b9aa7b63328557c1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_vpc.personal_website_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fb4f10a580aac020",
            "region": "us-east-1",
            "route_table_id": "rtb-0b9aa7b63328557c1",
            "subnet_id": "subnet-07d8735885651b021"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "242201278004",
            "id": "rtbassoc-0fb4f10a580aac020",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.personal_website_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242201278004:security-group/sg-0ebc31fa83fa13799",
            "description": "Security group for lambda functions",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.2/32"
                ],
                "description": null,
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "10.0.0.2/32"
                ],
                "description": null,
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              }
            ],
            "id": "sg-0ebc31fa83fa13799",
            "ingress": [],
            "name": "personal-website-stack-prod-lambda-security-group",
            "name_prefix": "",
            "owner_id": "242201278004",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-082cd8211b269c6ca"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "242201278004",
            "id": "sg-0ebc31fa83fa13799",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.personal_website_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242201278004:security-group/sg-0155587bae1d09e26",
            "description": "Security group for postgres instance",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.2/32"
                ],
                "description": "",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "10.0.0.2/32"
                ],
                "description": "",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              }
            ],
            "id": "sg-0155587bae1d09e26",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ebc31fa83fa13799"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "personal-website-stack-prod-rds-security-group",
            "name_prefix": "",
            "owner_id": "242201278004",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-082cd8211b269c6ca"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "242201278004",
            "id": "sg-0155587bae1d09e26",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.lambda_security_group",
            "aws_vpc.personal_website_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242201278004:subnet/subnet-05b8d11806c6d4126",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b8d11806c6d4126",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "242201278004",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "prod",
              "Name": "personal-website-stack-prod-private-subnet-1",
              "Project": "personal-website-stack",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "personal-website-stack-prod-private-subnet-1",
              "Project": "personal-website-stack",
              "managed_by": "Terraform"
            },
            "vpc_id": "vpc-082cd8211b269c6ca"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "242201278004",
            "id": "subnet-05b8d11806c6d4126",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.personal_website_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242201278004:subnet/subnet-07664400a619f639d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07664400a619f639d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "242201278004",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "prod",
              "Name": "personal-website-stack-prod-private-subnet-2",
              "Project": "personal-website-stack",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "personal-website-stack-prod-private-subnet-2",
              "Project": "personal-website-stack",
              "managed_by": "Terraform"
            },
            "vpc_id": "vpc-082cd8211b269c6ca"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "242201278004",
            "id": "subnet-07664400a619f639d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.personal_website_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242201278004:subnet/subnet-07d8735885651b021",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d8735885651b021",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "242201278004",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "prod",
              "Name": "personal-website-stack-prod-public-subnet-1",
              "Project": "personal-website-stack",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "personal-website-stack-prod-public-subnet-1",
              "Project": "personal-website-stack",
              "managed_by": "Terraform"
            },
            "vpc_id": "vpc-082cd8211b269c6ca"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "242201278004",
            "id": "subnet-07d8735885651b021",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.personal_website_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "personal_website_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242201278004:vpc/vpc-082cd8211b269c6ca",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04fc6021a144bef8c",
            "default_route_table_id": "rtb-0739e0ca576740683",
            "default_security_group_id": "sg-05d15b847fb2532e0",
            "dhcp_options_id": "dopt-07b44cf8cc9277877",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-082cd8211b269c6ca",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0739e0ca576740683",
            "owner_id": "242201278004",
            "region": "us-east-1",
            "tags": {
              "Environment": "prod",
              "Project": "personal-website-stack",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "Environment": "prod",
              "Project": "personal-website-stack",
              "managed_by": "Terraform"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "242201278004",
            "id": "vpc-082cd8211b269c6ca",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_https_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242201278004:security-group-rule/sgr-0a658d76ff788ca90",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0a658d76ff788ca90",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0ebc31fa83fa13799",
            "security_group_rule_id": "sgr-0a658d76ff788ca90",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "242201278004",
            "id": "sgr-0a658d76ff788ca90",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.lambda_security_group",
            "aws_vpc.personal_website_vpc"
          ]
        }
      ]
    }
  ]
}